--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-vue": "^10.6.0",
     "globals": "^16.5.0",
     "prettier": "^3.6.2",
+    "serialize-javascript": "^7.0.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.47.0",
     "vite": "^7.2.4",
