--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node server",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --outDir dist-ssr/client",
-    "build:server": "vite build --outDir dist-ssr/server --ssr src/entry-server.js",
+    "start:dev": "node server",
+    "build:dev": "npm run build:client:dev && npm run build:server:dev",
+    "build:client:dev": "vite build --outDir dist-ssr/client",
+    "build:server:dev": "vite build --outDir dist-ssr/server --ssr src/entry-server.js",
+
+    "start:prod": "NODE_ENV=production node server.js",
+    "build:prod": "npm run clean && npm run build:client:prod && npm run build:server:prod",
+    "build:client:prod": "vite build --outDir dist-ssr/client --mode production",
+    "build:server:prod": "vite build --outDir dist-ssr/server --ssr src/entry-server.js --mode production",
+
+    "clean": "rm -rf dist-ssr",
+
     "lint": "eslint --ext .js,.vue,.ts --fix src",
     "lint:fix": "eslint --ext .js,.vue,.ts src/ --fix",
-    "format": "prettier .  --write",
-    "production": "NODE_ENV=production node server.js"
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "@vue/server-renderer": "^3.5.24",
