--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 PORT_DEV=5173
 BASE_URL_DEV=/
 
-VITE_API_URL_PROD=http://localhost:3000
-VITE_API_URL_DEV=http://localhost:3000
+VITE_API_URL=http://localhost:3000/api
+VITE_APP_NAME=My App
