починил сборку для прода и промигивание стилей

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start:dev": "node server",
+    "dev": "node server.dev.js",
+    "devnossr": "vite",
     "build:dev": "npm run build:client:dev && npm run build:server:dev",
     "build:client:dev": "vite build --outDir dist-ssr/client",
     "build:server:dev": "vite build --outDir dist-ssr/server --ssr src/entry-server.js",
+    "prod": "node server.prod.js",
     "start:prod": "NODE_ENV=production node server.js",
-    "build:prod": "npm run clean && npm run build:client:prod && npm run build:server:prod",
+    "build:prod": "npm run clean:dist && npm run build:client:prod && npm run build:server:prod",
     "build:client:prod": "vite build --outDir dist-ssr/client --mode production",
     "build:server:prod": "vite build --outDir dist-ssr/server --ssr src/entry-server.js --mode production",
     "clean:dist": "rm -rf dist-ssr",
