--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build:dev": "npm run build:client:dev && npm run build:server:dev",
     "build:client:dev": "vite build --outDir dist-ssr/client",
     "build:server:dev": "vite build --outDir dist-ssr/server --ssr src/entry-server.js",
-    "prod": "node server.prod.js",
-    "start:prod": "NODE_ENV=production node server.js",
+    "prod": "NODE_ENV=production node server.prod.js",
     "build:prod": "npm run clean:dist && npm run build:client:prod && npm run build:server:prod",
     "build:client:prod": "vite build --outDir dist-ssr/client --mode production",
     "build:server:prod": "vite build --outDir dist-ssr/server --ssr src/entry-server.js --mode production",
